--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "codemirror": "^5.48.4",
     "core-js": "^2.6.5",
     "vue": "^2.6.10"
   },
