--- a/package.json
+++ b/package.json
@@ -1,15 +1,22 @@
 {
   "name": "vue-codemirror-editor",
-  "version": "0.1.0",
-  "private": true,
+  "version": "1.0.0",
+  "files": [
+    "src",
+    "dist"
+  ],
+  "main": "dist/vue-codemirror-editor.umd.min.js",
+  "style": "dist/vue-codemirror-editor.css",
   "scripts": {
     "serve": "vue-cli-service serve",
     "start": "vue-cli-service serve",
-    "build": "vue-cli-service build"
+    "build": "vue-cli-service build --target lib --name vue-codemirror-editor src/index.js --dest dist --formats umd-min --report",
+    "build:page": "vue-cli-service build"
   },
   "dependencies": {
     "codemirror": "^5.48.4",
     "core-js": "^2.6.5",
+    "diff-match-patch": "^1.0.4",
     "vue": "^2.6.10"
   },
   "devDependencies": {
